Ensure spacing between consecutive buttons
Fixes #1144

--- a/scss/_base_button.scss
+++ b/scss/_base_button.scss
@@ -45,6 +45,17 @@
   text-decoration: none;
   width: 100%;
 
+  & + & {
+
+    @media (max-width: $breakpoint-medium - 1) {
+      margin-top: $sp-medium;
+    }
+
+    @media (min-width: $breakpoint-medium) {
+      margin-left: $sp-medium;
+    }
+  }
+
   @media only screen and (min-width: $breakpoint-medium) {
     width: auto;
   }
